Fix Spacing

--- a/styles.css
+++ b/styles.css
@@ -25,13 +25,22 @@ main {
 }
 
 canvas {
+    margin: 5vh 0 5vh 0;
     padding: 3px;
     border: 3px #f76a6a solid;
     border-radius: 10px;
 }
 
+#gameContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+
 #score {
-    margin-bottom: 20px;
+    text-align: center;
     font-size: 2em;
     text-decoration: underline;
     text-decoration-color: #f76a6a;
@@ -39,8 +48,6 @@ canvas {
 }
 
 #start {
-    position: fixed;
-    bottom: 10vh;
     padding: 5px 10px 5px 10px;
     font-size: 2em;
     background-color: #2b2b2b;
